--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -22,6 +22,7 @@ deployments:
         Recipe: manage-frontend-arm-node16
         AmigoStage: PROD
       amiEncrypted: true
+      amiParameter: AMIManagefrontend
   manage-frontend:
     type: autoscaling
     dependencies: [manage-frontend-cloudformation]
