--- a/cfn.yaml
+++ b/cfn.yaml
@@ -2,16 +2,16 @@ AWSTemplateFormatVersion: 2010-09-09
 Description: manage-frontend
 Parameters:
   VpcIdPreCDK:
-    Type: String
+    Type: AWS::SSM::Parameter::Value<AWS::EC2::VPC::Id>
     Description: VpcId of your existing Virtual Private Cloud (VPC)
     Default: /account/vpc/primary/id
   PrivateVpcSubnetsPreCDK:
     Description: Private subnets to use for EC2 instances
-    Type: List<AWS::EC2::Subnet::Id>
+    Type: AWS::SSM::Parameter::Value<List<AWS::EC2::Subnet::Id>>
     Default: /account/vpc/primary/subnets/private
   PublicVpcSubnetsPreCDK:
     Description: Public subnets to use for the ELB
-    Type: List<AWS::EC2::Subnet::Id>
+    Type: AWS::SSM::Parameter::Value<List<AWS::EC2::Subnet::Id>>
     Default: /account/vpc/primary/subnets/public
   Stack:
     Description: Applied directly as a tag
