--- a/cdk/package.json
+++ b/cdk/package.json
@@ -8,7 +8,8 @@
     "format": "prettier --write \"{lib,bin}/**/*.ts\"",
     "lint": "eslint lib/** bin/** --ext .ts --no-error-on-unmatched-pattern",
     "synth": "cdk synth --path-metadata false --version-reporting false",
-    "diff": "cdk diff --path-metadata false --version-reporting false"
+    "diff": "cdk diff --path-metadata false --version-reporting false",
+    "deploy-code": "cdk deploy --path-metadata false --version-reporting false ManageFrontend-CODE"
   },
   "devDependencies": {
     "@guardian/cdk": "47.3.1",
