--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0",
     "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0",
     "whatwg-fetch": "^2.0.4"
   },
   "dependencies": {
