--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -28,3 +28,4 @@ deployments:
     dependencies: [manage-frontend-cloudformation]
     parameters:
       bucket: membership-dist
+      asgMigrationInProgress: true
