--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "scripts": {
     "start": "nodemon --inspect ./dist/server",
     "type-check": "tsc --noEmit --skipLibCheck",
-    "pretty-quick": "pretty-quick",
     "lint": "eslint 'client/**' 'server/**' 'shared/**'",
     "bundle": "copy-node-modules . ./dist && yarn webpack --config webpack.production.js",
     "bundle-dev": "yarn bundle-dev-server && yarn bundle-dev-client",
@@ -19,7 +18,6 @@
     "test": "jest --coverage && yarn type-check && yarn lint ",
     "jest": "jest",
     "updateSnapshot": "jest -u",
-    "fix": "pretty-quick --staged && eslint --fix 'client/**' 'server/**' 'shared/**'",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "cypress:open": "DEBUG=cypress:* cypress open",
@@ -27,9 +25,13 @@
     "cypress:server": "yarn bundle-dev-server && (yarn bundle-dev-server-cypress -w & yarn start & yarn serve-dev-cypress)",
     "chromatic": "chromatic"
   },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,css,md,json}": "prettier --write",
+    "{client,server,shared}/**": "eslint --fix"
+  },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn fix && yarn type-check && yarn bundle-check-client-if-changed"
+      "pre-commit": "yarn lint-staged --concurrent false && yarn type-check && yarn bundle-check-client-if-changed"
     }
   },
   "main": "./dist/server",
@@ -116,11 +118,11 @@
     "jest": "^27.3.1",
     "jest-each": "^26.6.2",
     "jest-teamcity-reporter": "^0.9.0",
+    "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "^2.5.2",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
-    "pretty-quick": "^3.1.2",
     "raw-loader": "^4.0.2",
     "react-test-renderer": "^17.0.2",
     "ts-jest": "^27.0.7",
